Fix alignment of images in squares

--- a/wp-content/themes/foriver-divi/sass/_squares.scss
+++ b/wp-content/themes/foriver-divi/sass/_squares.scss
@@ -243,6 +243,13 @@
       margin: 0;
       width: 100%;
       height: 100%;
+      left: 0;
+      top: 0;
+
+      a, span {
+        display: block;
+        height: 100%;
+      }
 
       img {
         object-fit: cover;
@@ -280,6 +287,10 @@
   .contact-block.contact-block {
     background: $white;
     bottom: 0 !important;
+
+    .et_pb_text_inner {
+      height: 100%;
+    }
 
     @media (min-width: 981px) {
       position: absolute;
