--- a/wp-content/themes/foriver-divi/stylesheets/main.css
+++ b/wp-content/themes/foriver-divi/stylesheets/main.css
@@ -2090,14 +2090,21 @@ body:not(.home) .type-page .has-grid-layout .et_pb_row:first-child > .et_pb_colu
   margin: 0;
   width: 100%;
   height: 100%;
+  left: 0;
+  top: 0;
 }
-/* line 247, ../sass/_squares.scss */
+/* line 249, ../sass/_squares.scss */
+.type-page .has-grid-layout .et_pb_blurb .et_pb_main_blurb_image a, .type-page .has-grid-layout .et_pb_blurb .et_pb_main_blurb_image span {
+  display: block;
+  height: 100%;
+}
+/* line 254, ../sass/_squares.scss */
 .type-page .has-grid-layout .et_pb_blurb .et_pb_main_blurb_image img {
   object-fit: cover;
   width: 100%;
   height: 100%;
 }
-/* line 254, ../sass/_squares.scss */
+/* line 261, ../sass/_squares.scss */
 .type-page .has-grid-layout .et_pb_blurb .et_pb_blurb_container {
   pointer-events: none;
   position: absolute;
@@ -2110,7 +2117,7 @@ body:not(.home) .type-page .has-grid-layout .et_pb_row:first-child > .et_pb_colu
   vertical-align: middle;
   transition: background .2s ease;
 }
-/* line 266, ../sass/_squares.scss */
+/* line 273, ../sass/_squares.scss */
 .type-page .has-grid-layout .et_pb_blurb .et_pb_blurb_container h4 {
   position: relative;
   top: 50%;
@@ -2441,13 +2448,17 @@ body:not(.home) .type-page .has-grid-layout .et_pb_row:first-child > .et_pb_colu
 .type-page .has-grid-layout .et_pb_blurb[class*="2-black "][class*="2-black "][class*="2-alpha85"] .et_pb_blurb_content:hover .et_pb_blurb_container, .type-page .has-grid-layout .et_pb_blurb[class*="2-black "][class*="2-black "][class*="2-alpha85"] .et_pb_blurb_content:active .et_pb_blurb_container, .type-page .has-grid-layout .et_pb_blurb[class*="2-black "][class*="2-black "][class*="2-alpha85"] .et_pb_blurb_content:focus .et_pb_blurb_container {
   background: rgba(0, 0, 0, 0.85);
 }
-/* line 280, ../sass/_squares.scss */
+/* line 287, ../sass/_squares.scss */
 .type-page .has-grid-layout .contact-block.contact-block {
   background: #ffffff;
   bottom: 0 !important;
 }
+/* line 291, ../sass/_squares.scss */
+.type-page .has-grid-layout .contact-block.contact-block .et_pb_text_inner {
+  height: 100%;
+}
 @media (min-width: 981px) {
-  /* line 280, ../sass/_squares.scss */
+  /* line 287, ../sass/_squares.scss */
   .type-page .has-grid-layout .contact-block.contact-block {
     position: absolute;
     top: calc(-200% + 5px) !important;
@@ -2456,12 +2467,12 @@ body:not(.home) .type-page .has-grid-layout .et_pb_row:first-child > .et_pb_colu
   }
 }
 @media (max-width: 980px) {
-  /* line 280, ../sass/_squares.scss */
+  /* line 287, ../sass/_squares.scss */
   .type-page .has-grid-layout .contact-block.contact-block {
     padding: 15px;
   }
 }
-/* line 295, ../sass/_squares.scss */
+/* line 306, ../sass/_squares.scss */
 .type-page .has-grid-layout .contact-block.contact-block h2 {
   text-transform: lowercase;
   color: #BADA55;
@@ -2469,19 +2480,19 @@ body:not(.home) .type-page .has-grid-layout .et_pb_row:first-child > .et_pb_colu
   line-height: .7em !important;
   white-space: nowrap;
 }
-/* line 303, ../sass/_squares.scss */
+/* line 314, ../sass/_squares.scss */
 .type-page .has-grid-layout .contact-block.contact-block p {
   font-size: 15px;
   font-family: "Avenir Light", Helvetica, Arial, sans-serif;
 }
 @media (min-width: 981px) {
-  /* line 303, ../sass/_squares.scss */
+  /* line 314, ../sass/_squares.scss */
   .type-page .has-grid-layout .contact-block.contact-block p {
     position: absolute;
     bottom: 30px;
   }
 }
-/* line 313, ../sass/_squares.scss */
+/* line 324, ../sass/_squares.scss */
 .type-page .has-grid-layout .contact-block.contact-block a {
   color: #698083;
 }
